fix content on mobile

--- a/cakephpsphinx/themes/cakephp/static/css/responsive.css
+++ b/cakephpsphinx/themes/cakephp/static/css/responsive.css
@@ -146,6 +146,10 @@
     font-size: 24px;
     line-height: 30px;
   }
+
+  .staticmethod {
+    overflow-x: auto;
+  }
 }
 
 /**
